# maxcloud-clientrtc-remote

./: .gitignore  Cargo.toml  README.md  build.sh
.cursor/rules/: rust.mdc
src/: handlers.rs  main.rs  middleware.rs  models.rs
src/signalr_client/: Cargo.toml  Trunk.toml  index.html
src/signalr_client/.cargo/: config.toml
src/signalr_client/dotnet/SignalRTestService/: Dockerfile  Program.cs  SignalRTestService.csproj  SignalRTestService.sln  TestHub.cs
src/signalr_client/dotnet/SignalRTestService/Properties/: launchSettings.json
src/signalr_client/src/: lib.rs  signalr-client-wasm.code-workspace
src/signalr_client/src/client/: client.rs  configuration.rs  context.rs  mod.rs
src/signalr_client/src/communication/: client_tokio.rs  client_wasm.rs  common.rs  mod.rs
src/signalr_client/src/completer/: completed_future.rs  manual_future.rs  manual_stream.rs  mod.rs
src/signalr_client/src/execution/: actions.rs  arguments.rs  callback.rs  enumerable.rs  invocation.rs  mod.rs  storage.rs  storage_tokio.rs  storage_wasm.rs
src/signalr_client/src/protocol/: close.rs  invoke.rs  messages.rs  mod.rs  negotiate.rs  streaming.rs
src/signalr_client/src/tests/: mod.rs  tests_tokio.rs  tests_wasm.rs
