[package]
name = "signalr-client"
version = "0.1.1"
edition = "2021"
authors = ["Daniel Leiszen <daniel.leiszen@gmail.com>"]
description = "A Rust library for calling SignalR hubs from a Rust cross-platform application, supporting WASM and non WASM targets."
license = "MIT"
repository = "https://github.com/danielleiszen/rust_signalr_client"
homepage = "https://github.com/danielleiszen/rust_signalr_client"
documentation = "https://docs.rs/signalr-client"
readme = "README.md"
keywords = ["signalr", "rust", "websockets", "tokio", "wasm"]
categories = ["network-programming", "web-programming", "asynchronous"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_repr = "0.1.19"
futures = "0.3.31"
ehttp = "0.5.0"
test-log = {version = "0.2.17", features = ["log"] }
base64 = "0.22.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-sockets = "1.0.0"
wasm-timer = "0.2.5"
async-std = "1.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-websockets = { version = "0.11.3", features = ["sha1_smol", "fastrand", "client", "native-tls"] }
tokio-native-tls = "0.3.1"
http = { version = "1", default-features = false, features = ["std"] }

# [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# wasm-bindgen-test = "0.3.50"